--- a/index.html
+++ b/index.html
@@ -4,15 +4,46 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- Favicon Icon -->
+   
     <link href="./assets/images/favicon.ico" rel="icon" type="image/x-icon">
-    <!-- Bootstrap CSS Framework -->
+ 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
-    <!-- Custom Stylesheet -->
+   
     <link rel="stylesheet" href="./assets/css/style.css">
     <title>Weather Dashboard</title>
 </head>
+
 <body>
-    
+
+    <header>
+        <div class=""></div>
+            <h1>Weather Dashboard</h1>
+    </header>
+
+    <main class="">
+        <div id="row p-2">
+            <!-- Search Input and Search History / left sidebar -->
+            <section class="col-12 col-sm-5 col-md-4 col-lg-3 col-xlg-3 border: 1px;">
+                <form class="m-1">
+                    <div class=">
+                        <label for=" user-input">
+                        <h3 class="p-2">Search by City: </h3>
+                        </label>
+                        <input type="text" placeholder="Search City" class="form-control" id="user-input">
+                        <button type="submit" id="search-button"
+                            class="btn btn-success mb-4 mt-2 d-grid col-6 mx-auto">Search
+                        </button>
+                    </div>
+                    <!-- Search History -->
+                    <div class="pt-4">
+                        <h4>Recent Searches: </h4>
+                        <div class="row mb-4 mt-2 d-grid gap-2 col-6" id="results-div">
+                            <!-- Search history buttons generated here -->
+                            <div id="recentBtn" class=""></div>
+                            <div id="historyBtn" class=""></div>
+                        </div>
+                    </div>
+                </form>
+            </section>
 </body>
 </html>
