weather cards + sub headers

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <section class="col-12 col-sm-5 col-md-4 col-lg-3 col-xlg-3 border: 1px;">
                 <form class="m-1">
                     <div class=">
-                        <label for=" user-input">
+                        <label for = "user-input">
                         <h3 class="p-2">Search by City: </h3>
                         </label>
                         <input type="text" placeholder="Search City" class="form-control" id="user-input">
@@ -44,6 +44,22 @@
                         </div>
                     </div>
                 </form>
+            </section>
+
+            <section class="col 12 col-sm-9 col-md-8 col-lg-9"">
+                <!-- Current weather display -->
+                <div class=" p-0">
+                    <div class="d-flex">
+                        <h2 class="card-title" id="main-card-title">
+                            </h5>
+                            <p class="date"></p>
+                            <ul>
+                                <li id="main-card-temp"></li>
+                                <li id="main-card-wind"></li>
+                                <li id="main-card-humidity"></li>
+                            </ul>
+                    </div>
+                </div>
             </section>
 </body>
 </html>
