--- a/index.html
+++ b/index.html
@@ -61,5 +61,59 @@
                     </div>
                 </div>
             </section>
+
+            <section
+            <!-- Five-day forecast display  -->
+            <div>
+                <h2>Five-Day Forecast:</h2>
+                <div
+                    class="p-4 d-flex flex-row mb-3 align-content-center justify-content-evenly flex-wrap container card bg-light">
+                    <!-- Card 1 -->
+                    <section class="col-sm-10 col-md-4 offset-lg-1 col-lg-2 p-1">
+                        <div class="card-body">
+
+                        </div>
+                    </section>
+
+                    <!-- Card 2 -->
+                    <section class="col-sm-10 col-md-4 offset-lg-1 col-lg-2 p-1">
+                        <div class="card-body">
+
+                        </div>
+                    </section>
+
+                    <!-- Card 3 -->
+                    <section class="col-sm-10 col-md-4 offset-lg-1 col-lg-2 p-1">
+                        <div class="card-body">
+
+                        </div>
+                    </section>
+
+                    <!-- Card 4 -->
+                    <section class="col-sm-10 col-md-4 offset-lg-1 col-lg-2 p-1">
+                        <div class="card-body">
+
+                        </div>
+                    </section>
+
+                    <!-- Card 5 -->
+                    <section class="col-sm-10 col-md-4 offset-lg-1 col-lg-2 p-1">
+                        <div class="card-body">
+
+                        </div>
+                    </section>
+                </div>
+            </div>
+        </section>
+
+    </div>
+</main>
+
+<footer>
+    <p class="footer text-center p-2">
+        2023 Weather Dashboard, Made with the Open Weather API
+    </p>
+</footer>
+<script type="text/javascript" src="./assets/js/script.js"></script>
 </body>
 </html>
